--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>DTST</title>
 </head>
 <body
-   Quyida nomlari keltirilgan olimlardan qaysilari sifat sohasi bo'yicha izlanish olib borishgan.
+   <pre>
+      Quyida nomlari keltirilgan olimlardan qaysilari sifat sohasi bo'yicha izlanish olib borishgan.
 ====
 #Uolter Shuxart, Aristotel,Edvard Deming,Singo Siego 
 ====
@@ -1052,7 +1053,7 @@ Tartiblangan yoki nominal
 ++++
 
 Faraz qilaylik, "B dasturni C dasturga taqqoslaganda bir necha birlikka katta, A dastur B dasturga qaraganda 20 birlikka katta" jumlasi berilgan. Mazkur jumla qaysi o'lchov shkalasiga na'muna bo'la oladi?
-====
-
+==== 
+   </pre>
 </body>
-</html>
+<html>
